Add cutting guides to print-minidolls

--- a/print-minidolls.html
+++ b/print-minidolls.html
@@ -176,6 +176,29 @@
         ctx.fillStyle = "#ffffff";
         ctx.fillRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
 
+        // Draw cutting guides (before content so headers can overlap)
+        ctx.strokeStyle = "#999999";
+        ctx.lineWidth = 1;
+
+        // Horizontal lines between rows (1px below row top so header overlaps most of it)
+        for (let row = 0; row <= ROWS; row++) {
+          const y = MARGIN_TOP + row * CELL_HEIGHT + 1;
+          ctx.beginPath();
+          ctx.moveTo(MARGIN_LEFT, y);
+          ctx.lineTo(MARGIN_LEFT + GRID_WIDTH, y);
+          ctx.stroke();
+        }
+
+        // Left and right borders
+        ctx.beginPath();
+        ctx.moveTo(MARGIN_LEFT, MARGIN_TOP);
+        ctx.lineTo(MARGIN_LEFT, MARGIN_TOP + GRID_HEIGHT);
+        ctx.stroke();
+        ctx.beginPath();
+        ctx.moveTo(MARGIN_LEFT + GRID_WIDTH, MARGIN_TOP);
+        ctx.lineTo(MARGIN_LEFT + GRID_WIDTH, MARGIN_TOP + GRID_HEIGHT);
+        ctx.stroke();
+
         for (let i = 0; i < dolls.length; i++) {
           const doll = dolls[i];
           const col = i % COLS;
@@ -238,7 +261,7 @@
         }
 
         // Draw vertical grid lines on top
-        ctx.strokeStyle = "#cccccc";
+        ctx.strokeStyle = "#999999";
         ctx.lineWidth = 1;
         for (let col = 1; col < COLS; col++) {
           const x = MARGIN_LEFT + col * CELL_WIDTH;
